# UpSkiller

./: .gitignore  README.md  pyproject.toml
.kiro/specs/upskiller-android-app/: .config.kiro  design.md  requirements.md  tasks.md
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/res/layout/: activity_edit_profile.xml  activity_login.xml  activity_main.xml  activity_register.xml  activity_roadmap_detail.xml  activity_skill_setup.xml  activity_skills.xml  activity_splash.xml  dialog_add_skill.xml  fragment_create_roadmap.xml  fragment_home.xml  fragment_profile.xml  fragment_roadmap_list.xml  item_phase.xml  item_roadmap.xml  item_skill.xml  item_skill_onboarding.xml  item_topic.xml
android_app/app/src/main/res/menu/: bottom_nav_menu.xml
android_app/app/src/main/res/values/: colors.xml  (+2 more)
android_app/app/src/main/res/values-night/: themes.xml
android_app/gradle/: libs.versions.toml
android_app/gradle/wrapper/: gradle-wrapper.properties
backend/: upskiller.sqlite3
backend/backend/: celery.py  settings.py  urls.py
backend/roadmaps/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/roadmaps/ai_agent/: client.py  graph.py  models.py  prompts.py  state.py
backend/roadmaps/migrations/: 0001_initial.py
backend/users/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/users/migrations/: 0001_initial.py
(+44 files in other folders)
