[project]
name = "upskiller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "drf-yasg>=1.21.15",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "redis>=8.0.0",
]
